footer 社群icon連結大小修正 swiper外標籤拿掉 增加登入彈窗

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -58,20 +58,26 @@ footer{
 
     .footer-share{
         @include flex;
-        gap:8px;
+        gap:40px;
         // @include mentor-img(100px);
         svg{
             // width: 50px;
             // height: 50px;
-            fill:$c-secondary;
-        }
-        &:hover{
-            fill:$c-secondary-deep;
-            -webkit-transition: all 0.3s ease;
-            -moz-transition: all 0.3s ease;
-            -ms-transition: all 0.3s ease;
-            -o-transition: all 0.3s ease;
-            transition: all 0.3s ease;
+            width: 100%;
+            height: 30px;
+            path {
+                fill: $c-secondary-light;
+                }
+            }
+        a:hover{
+            path {
+                fill: $c-secondary;
+                -webkit-transition: all 0.3s ease;
+                -moz-transition: all 0.3s ease;
+                -ms-transition: all 0.3s ease;
+                -o-transition: all 0.3s ease;
+                transition: all 0.3s ease;
+                }
         }
     }
 
