--- a/src/layout/swiper.html
+++ b/src/layout/swiper.html
@@ -32,6 +32,6 @@
         </div>
     </div>
     <!-- <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div> -->
+    <div class="swiper-button-prev"></div> -->
+    <!-- <div class="swiper-pagination"></div> -->
 </div>
