--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -386,7 +386,6 @@ input,select,textarea{
     }
 }
 
-<<<<<<< HEAD
 
 //quote
 .quote{
@@ -421,7 +420,8 @@ input,select,textarea{
         height: 37px;
         position: absolute;
     }
-=======
+}
+
 // 彈窗背景共用
 .dialog-bg {
     @include absolute($top: 0, $left: 0, $right: 0, $bottom: 0, $z-i: 9991);
@@ -429,5 +429,4 @@ input,select,textarea{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
->>>>>>> 10a7f38f25f8427cc29c69f843f90df9e266a9ea
 }
