--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -28,6 +28,10 @@
 @import 'page/company-news';
 @import 'page/company-walfare';
 @import 'page/lottery';
+@import 'page/searchResult-company';
+@import 'page/searchResult-job';
+@import 'page/searchResult-news';
+@import 'page/searchResult-issue';
 
 //google-font
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
@@ -36,7 +40,7 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css");
 
 // swiper
-@import url("https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css");
+@import url("https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css");
 
 
 *{
@@ -386,10 +390,6 @@ input,select,textarea{
     }
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> hsiaohan
 
 //quote
 .quote{
@@ -424,12 +424,10 @@ input,select,textarea{
         height: 37px;
         position: absolute;
     }
-<<<<<<< HEAD
-=======
-=======
+
 }
 
->>>>>>> hsiaohan
+
 // 彈窗背景共用
 .dialog-bg {
     @include absolute($top: 0, $left: 0, $right: 0, $bottom: 0, $z-i: 9991);
@@ -437,8 +435,4 @@ input,select,textarea{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-<<<<<<< HEAD
->>>>>>> yian
-=======
->>>>>>> hsiaohan
 }
