--- a/src/sass/page/_index.scss
+++ b/src/sass/page/_index.scss
@@ -1,7 +1,7 @@
 .index-wrapper{
-    .swiper{
-        margin: 33px 0px 0px 0px;
-    }
+    // .swiper{
+    //     margin: 33px 0px 0px 0px;
+    // }
     
     .cardJob{
         @extend %page-content;
