--- a/src/sass/page/_single-post.scss
+++ b/src/sass/page/_single-post.scss
@@ -1,80 +1,382 @@
-.left{
-    grid-area: a;
-}
+.single-post-wrapper {
 
-.right{
-    grid-area: b;
-}
+    .single-post-container {
+        @extend %ma;
+        margin-top: 100px;
+        padding: 2rem;
+        max-width: 1420px;
+        display: grid;
+        grid-template-areas:
+            "a b"
+            "c c";
+        grid-template-columns: 70% 30%;
+        // gap: 2rem;
 
-.btm{
-    grid-area:c;
-}
+        @include pad {
+            padding: 1rem !important;
+            grid-template-areas:
+                "a"
+                "c"
+                "b";
+            grid-template-columns: 100%;
 
-.single-post-container{
-    display: grid;
-    grid-template-areas:
-        "a b"
-        "c c";
-    grid-template-rows: 45px;
-    grid-template-columns: 70% 30%;
+            >.col {
+                padding: 1rem !important;
 
-    .media-share {
-        @include flex($a-i: center, $w: wrap);
-        gap: 10px;
+                .info {
+                    justify-content: flex-start !important;
+                    flex-wrap: wrap !important;
 
-        .media-item {
-            a {
-                @extend %dib;
-                @extend %bb;
-                width: 40px;
-                height: 40px;
-                padding: 0.5rem;
-                border: 1px solid #DDDDDD;
-                border-radius: 100px;
-                transition: all ease .4s;
+                    .col {
+                        padding: 0.5rem;
+                        
+                        &:first-child{
+                            flex-wrap: wrap !important;
+                        }
 
-                &:hover {
-                    border-color: $c-primary-deep;
+                        .view-count {
+                            padding-left: 35px !important;
+                            flex-basis: 100% !important;
 
-                    svg {
-                        path {
-                            fill: $c-primary-deep;
+                            &::before {
+                                left: 0 !important;
+                            }
+                        }
+
+                        &.media-share {
+                            justify-content: flex-start !important;
+                            flex-basis: 100% !important;
                         }
                     }
                 }
 
-                svg {
-                    width: 100%;
-                    height: 100%;
+                .post-content {
+                    padding: 1rem !important;
 
-                    path {
-                        transition: all ease .4s;
+                    img {
+                        margin: 0 0 2rem;
+                    }
+                }
+            }
+
+            .bottom {
+                flex-wrap: wrap !important;
+                gap: 10px !important;
+
+                .row {
+                    flex-basis: 100% !important;
+
+                    .info {
+                        flex-wrap: wrap !important;
+
+                    }
+
+                    a.article-item {
+                        margin: 0 !important;
                     }
                 }
             }
         }
-    }
 
-    .category {
-        ul {
-            @include flex($w: wrap);
-            gap: 10px;
+        .left {
+            grid-area: a;
+        }
 
-            li {
-                @extend %pointer;
+        .right {
+            grid-area: b;
+        }
+
+        .bottom {
+            grid-area: c;
+        }
+
+        .category {
+            ul {
+                @include flex($w: wrap);
+                gap: 10px;
+
+                li {
+                    @extend %pointer;
+
+                    a {
+                        @extend %dib;
+                        color: $c-primary-deep;
+                        padding: 0.5rem 1rem;
+                        transition: all ease .4s;
+                        border: 1px solid #d9d9d9;
+                        border-radius: 5px;
+
+                        &:hover {
+                            color: $c-white;
+                            background: $c-primary-deep;
+                            border-color: $c-primary-deep;
+                        }
+                    }
+                }
+            }
+        }
+
+        .col {
+
+            padding: 1.5rem;
+
+            .row {
+                margin-bottom: 2rem;
+            }
+
+            &.left {
+
+                p,
+                h3 {
+                    color: $c-black;
+                }
+
+                h2 {
+                    font-family: 'Noto Sans TC', sans-serif !important;
+                    font-weight: 400;
+                }
+
+                .row {
+
+                    .article-basic-info {
+                        margin-bottom: 3rem;
+
+                        .info {
+                            @include flex($a-i: center, $j-c: space-between);
+
+                            .col {
+                                @include flex($a-i: center);
+                                row-gap: 20px;
+
+                                &.media-share {
+                                    @include flex($a-i: center, $w: wrap, $j-c: flex-end);
+                                    gap: 10px;
+                                    flex-basis: 50%;
+
+                                    .media-item {
+                                        a {
+                                            @extend %dib;
+                                            @extend %bb;
+                                            width: 40px;
+                                            height: 40px;
+                                            padding: 0.5rem;
+                                            border: 1px solid #DDDDDD;
+                                            border-radius: 100px;
+                                            transition: all ease .4s;
+
+                                            &:hover {
+                                                border-color: $c-primary-deep;
+
+                                                svg {
+                                                    path {
+                                                        fill: $c-primary-deep;
+                                                    }
+                                                }
+                                            }
+
+                                            svg {
+                                                width: 100%;
+                                                height: 100%;
+
+                                                path {
+                                                    transition: all ease .4s;
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+
+                                &:first-child {
+                                    flex: 0 1 100%;
+
+                                    p {
+                                        border-right: 1px solid #C6C6C6;
+                                        padding: 0rem 1rem;
+
+                                        &:last-child {
+                                            border-right: none;
+                                        }
+
+                                        &:first-child {
+                                            padding-left: 0;
+                                        }
+
+                                        &.view-count {
+                                            @extend %rel;
+                                            padding-left: 3.2rem;
+
+                                            span {
+                                                color: $c-gray;
+                                                font-weight: 600;
+                                            }
+
+                                            &::before {
+                                                @include absolute($top: 3px, $left: 15px);
+                                                content: url('../img/view-count.svg');
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    &.post-content {
+                        padding: 3rem;
+
+                        .contents {
+                            >p {
+                                color: $c-gray;
+                                margin-bottom: 2rem;
+                            }
+
+                            .quote {
+                                margin: 5rem 0;
+                            }
+                        }
+
+                        img {
+                            margin: 4rem 0;
+                        }
+                    }
+                }
+            }
+
+            &.right {
+                .row {
+
+                    &.company-info {
+
+                        .row {
+                            background: $c-secondary-white;
+                            padding: 2rem;
+
+                            .a-item {
+                                @extend %dib;
+                                @extend %pointer;
+                                width: 100%;
+
+                                p.title {
+                                    padding: 1rem;
+                                }
+                            }
+
+                            // 共用標題樣式
+                            .job-title {
+                                @extend %tac;
+                                letter-spacing: 1px;
+                                color: $c-black;
+                                padding: 1rem 0;
+                                border-bottom: 1px solid #DDD0C5;
+                            }
+
+                            .g-job,
+                            .g-article {
+                                padding: 1rem 0;
+                            }
+
+                            &.company-name {
+                                @include flex($a-i: center);
+                                gap: 20px;
+                                background: #F0E7DE;
+                                margin-bottom: 0;
+
+                                img {
+                                    @extend %bb;
+                                    width: 100%;
+                                    max-width: 50px;
+                                    border-radius: 10px;
+                                    background: $c-white;
+                                    padding: 5px;
+                                }
+                            }
+
+                            &.opening {
+                                @extend %tac;
+
+                                li {
+                                    text-align: left;
+                                    margin-bottom: 1rem;
+
+                                    a {
+                                        color: $c-black;
+                                        transition: all ease .4s;
+
+                                        &:hover {
+                                            color: $c-primary;
+                                            font-weight: 600;
+                                        }
+                                    }
+                                }
+                            }
+
+                        }
+                    }
+                }
+            }
+        }
+
+        .bottom {
+            @include flex($a-i: center, $j-c: space-between);
+            padding: 3rem 0;
+            border-top: 1px solid #D9D9D9;
+            gap: 80px;
+
+            .row {
+                flex: 1;
+
+                &.next {
+                    .article-item {
+                        @include flex($d: row-reverse, $a-i: center);
+                    }
+                }
 
                 a {
-                    @extend %dib;
-                    color: $c-primary-deep;
-                    padding: 0.5rem 1rem;
-                    transition: all ease .4s;
-                    border: 1px solid #d9d9d9;
-                    border-radius: 5px;
+                    @extend %pointer;
+                }
 
-                    &:hover {
-                        color: $c-white;
-                        background: $c-primary-deep;
-                        border-color: $c-primary-deep;
+                a.tag {
+                    @include flex($d: row-reverse, $j-c: flex-end);
+                    font-size: $p1;
+                    color: $c-black;
+
+                    &.next {
+                        @include flex($j-c: flex-end);
+
+                        span {
+                            transform: unset;
+                        }
+                    }
+
+                    span {
+                        @include flex($a-i: center);
+                        transform: rotate(-180deg);
+
+                        svg {
+                            max-width: 15px;
+                        }
+                    }
+                }
+
+                a.article-item {
+                    @include flex($a-i: center);
+                    margin: 2rem 0;
+                    gap: 10px;
+                    padding: 1rem;
+
+                    img {
+                        max-width: 150px;
+                    }
+
+                    p {
+                        flex: 1;
+                        display: -webkit-box !important;
+                        letter-spacing: 1.5px !important;
+                        text-overflow: ellipsis;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        height: 60px;
                     }
                 }
             }
