調整怡安整理的細節:卡片padding  標題字距padding 增加得獎頁頁碼

--- a/src/layout/card-job.html
+++ b/src/layout/card-job.html
@@ -276,9 +276,9 @@
                 </div>
                 <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p>友善環境</p>
-                    <p>幸福企業</p>
-                    <p>幸福企業讚讚</p>
+                    <p class="tag">友善環境</p>
+                    <p class="tag">幸福企業</p>
+                    <p class="tag">幸福企業讚讚</p>
         
                 </div>
             </div>
