--- a/src/sass/layout/_card-job-tag.scss
+++ b/src/sass/layout/_card-job-tag.scss
@@ -110,41 +110,41 @@
 
 
 
-.minipad-swiper{
-    display: none;
-    @include mini-pad{
-        display: block;
-        max-width: 500px;   
-    }
+// .minipad-swiper{
+//     display: none;
+//     @include mini-pad{
+//         display: block;
+//         max-width: 500px;   
+//     }
 
-    @include mobile{
-        display: block;
-        max-width: 300px;   
-    }
-    .swiper {
-        width: 100%;
-        height: 100%;
-    }
+//     @include mobile{
+//         display: block;
+//         max-width: 300px;   
+//     }
+//     .swiper {
+//         width: 100%;
+//         height: 100%;
+//     }
 
-    .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        display: flex;
-        background-color: transparent;
-        justify-content: center;
-        align-items: center;
-    }
+//     .swiper-slide {
+//         text-align: center;
+//         font-size: 18px;
+//         display: flex;
+//         background-color: transparent;
+//         justify-content: center;
+//         align-items: center;
+//     }
 
-    .swiper-slide img {
-        padding: 0px;
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-    .card-job{
-        @include mobile{
-            width: 200px;
-        }
-    }
-}
+//     .swiper-slide img {
+//         padding: 0px;
+//         display: block;
+//         width: 100%;
+//         height: 100%;
+//         object-fit: cover;
+//     }
+//     .card-job{
+//         @include mobile{
+//             width: 200px;
+//         }
+//     }
+// }
