--- a/src/sass/layout/_swiper.scss
+++ b/src/sass/layout/_swiper.scss
@@ -8,7 +8,7 @@
 
     @include pad{
         max-height: 1000px;
-        min-height: 800px;
+        min-height: 500px;
     }
 
     @include mobile{
@@ -80,9 +80,14 @@
     display: block;
     width: 100%;
     height: 100%;
-    max-height: 600px;
+    min-height: 600px;
+    max-height: 700px;
     object-fit: cover;
     overflow: hidden;
+    @include pad{
+        max-height: 660px;
+        min-height: 0px;
+    }
 }
 
 .swiper-pagination-bullet{
@@ -91,3 +96,5 @@
     border-radius: 0px;
     background-color: $c-primary;
 }
+
+
