--- a/src/sass/page/_happiness-job.scss
+++ b/src/sass/page/_happiness-job.scss
@@ -2,50 +2,55 @@
     .swiper{
         margin: 33px 0px 0px 0px;
     }
-    
-    .happinessJob{
-        @extend %page-content;
-        @include flex($d:column,$a-i:center);
-        margin: auto;
-        gap:48px;
-        padding: 88px 120px;
-        background: $c-secondary-white;
-        @include pad{
-            padding: 66px 80px;
-            gap:32px;
-        }
-        @include mini-pad{
-            padding: 40px 30px;
-            gap:24px;
-        }
-        >.title{
-            border-bottom: none;
-            padding: 0px;
-        }
-        .company-select{
-            @include flex($d:column,$a-i:flex-end);
-            gap:16px;
 
-            .advanced{
-                @extend %pointer;
-                color: $c-secondary;
-                font-size: $tag;
-                text-decoration-line: underline;
+    .happinessJob-wrapper{
+        background: $c-secondary-white;
+        .happinessJob{
+            @extend %page-content;
+            @include flex($d:column,$a-i:center);
+            margin: auto;
+            gap:48px;
+            padding: 88px 120px;
+            background: $c-secondary-white;
+            @include pad{
+                padding: 66px 80px;
+                gap:32px;
             }
-            .select-flex{
-                @include flex($j-c:space-between);
-                width: 400px;
-                gap:20px;
-                @include mini-pad{
-                    @include flex($d:column,$a-i:center);
-                    width: 400px;
+            @include mini-pad{
+                padding: 40px 30px;
+                gap:24px;
+            }
+            >.title{
+                border-bottom: none;
+                padding: 0px;
+            }
+            .company-select{
+                @include flex($d:column,$a-i:flex-end);
+                gap:16px;
+    
+                .advanced{
+                    @extend %pointer;
+                    color: $c-secondary;
+                    font-size: $tag;
+                    text-decoration-line: underline;
                 }
-                @include mobile{
-                    width: 260px;
+                .select-flex{
+                    @include flex($j-c:space-between);
+                    width: 400px;
+                    gap:20px;
+                    @include mini-pad{
+                        @include flex($d:column,$a-i:center);
+                        width: 400px;
+                    }
+                    @include mobile{
+                        width: 260px;
+                    }
                 }
             }
         }
     }
+    
+
 
     .ad-area-wrapper{
         background: $c-white;
